<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_primary"
    tools:context=".view.login.LoginPrimaryFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textColorHint="@color/etTextHint"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="7dp"
        app:boxCornerRadiusBottomStart="7dp"
        app:boxCornerRadiusTopEnd="7dp"
        app:boxCornerRadiusTopStart="7dp"
        app:boxStrokeColor="@color/etStroke"
        app:boxStrokeWidth="1.5dp"
        app:errorTextColor="@color/white"
        app:hintEnabled="false"
        app:hintTextColor="@color/etTextHint"
        app:layout_constraintBottom_toTopOf="@id/etPassword"
        app:layout_constraintEnd_toEndOf="@id/marginEnd"
        app:layout_constraintStart_toStartOf="@id/marginStart"
        app:layout_constraintTop_toTopOf="@id/marginTop"
        app:layout_constraintVertical_chainStyle="packed"
        app:startIconDrawable="@drawable/ic_round_email_24"
        app:startIconTint="@color/iconTint">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/etTextColor"
            android:textColorHint="@color/etTextHint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:textColorHint="@color/etTextHint"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="7dp"
        app:boxCornerRadiusBottomStart="7dp"
        app:boxCornerRadiusTopEnd="7dp"
        app:boxCornerRadiusTopStart="7dp"
        app:boxStrokeColor="@color/etStroke"
        app:boxStrokeWidth="1.5dp"
        app:errorTextColor="@color/white"
        app:hintEnabled="false"
        app:hintTextColor="@color/etTextHint"
        app:layout_constraintBottom_toTopOf="@id/btnLogin"
        app:layout_constraintEnd_toEndOf="@id/marginEnd"
        app:layout_constraintStart_toStartOf="@id/marginStart"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/iconTint"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:startIconTint="@color/iconTint">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/etTextColor"
            android:textColorHint="@color/etTextHint" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:background="@drawable/bg_btn_border"
        android:backgroundTint="@color/btnBgGreen"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/tvForgotPass"
        app:layout_constraintEnd_toEndOf="@id/marginEnd"
        app:layout_constraintStart_toStartOf="@id/marginStart"
        app:layout_constraintTop_toBottomOf="@id/etPassword" />

    <TextView
        android:id="@+id/tvForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/marginBottom"
        app:layout_constraintEnd_toEndOf="@id/marginEnd"
        app:layout_constraintTop_toBottomOf="@id/btnLogin" />

<!--
    <TextView
        android:id="@+id/tvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/or"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/btnGoogleLogin"
        app:layout_constraintEnd_toEndOf="@id/marginEnd"
        app:layout_constraintStart_toStartOf="@id/marginStart"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPass" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGoogleLogin"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:background="@drawable/bg_btn_border"
        android:backgroundTint="@color/white"
        android:text="@string/sign_in_with_google"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/marginBottom"
        app:layout_constraintEnd_toEndOf="@id/marginEnd"
        app:layout_constraintStart_toStartOf="@id/marginStart"
        app:layout_constraintTop_toBottomOf="@id/tvOr" />-->

    <TextView
        android:id="@+id/tvSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_account"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/bottomGap"
        app:layout_constraintEnd_toEndOf="@id/marginEnd"
        app:layout_constraintStart_toStartOf="@id/marginStart" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomGap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".97" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/marginStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/marginEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".93" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/marginTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/marginBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".97" />
</androidx.constraintlayout.widget.ConstraintLayout>