<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_primary"
    tools:context=".view.login.LoginResetPassFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="7dp"
        app:boxCornerRadiusBottomStart="7dp"
        app:boxCornerRadiusTopEnd="7dp"
        app:boxCornerRadiusTopStart="7dp"
        app:boxStrokeColor="@color/etStroke"
        app:boxStrokeWidth="1.5dp"
        app:errorTextColor="@color/white"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@id/btnReset"
        app:layout_constraintEnd_toEndOf="@id/marginEnd"
        app:layout_constraintStart_toStartOf="@id/marginStart"
        app:layout_constraintTop_toTopOf="@id/marginTop"
        app:layout_constraintVertical_chainStyle="packed"
        app:startIconDrawable="@drawable/ic_round_email_24"
        app:startIconTint="@color/iconTint">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/etTextColor"
            android:textColorHint="@color/etTextHint" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/btnReset"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:background="@drawable/bg_btn_border"
        android:backgroundTint="@color/btnBgGreen"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@id/marginBottom"
        app:layout_constraintEnd_toEndOf="@id/marginEnd"
        app:layout_constraintStart_toStartOf="@id/marginStart"
        app:layout_constraintTop_toBottomOf="@id/etEmail">

        <TextView
            android:id="@+id/tvResetPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/ivConfirmed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_baseline_download_done_24"
            android:visibility="gone"
            app:tint="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvPleaseCheck"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/marginEnd"
        app:layout_constraintStart_toStartOf="@id/marginStart"
        app:layout_constraintTop_toBottomOf="@id/btnReset"
        app:layout_constraintWidth_percent=".55" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back_to_login"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/bottomGap"
        app:layout_constraintEnd_toEndOf="@id/marginEnd"
        app:layout_constraintStart_toStartOf="@id/marginStart" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomGap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".97" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/marginStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/marginEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".93" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/marginTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/marginBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".97" />
</androidx.constraintlayout.widget.ConstraintLayout>